sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:11: error: not found: value i
    i = 0
    ^AlgCombSort:12: error: not found: value i
    while (i + ecart < lgr) {
           ^AlgCombSort:13: error: not found: value i
      if (!plusPetit(i, i+ecart)) {
                     ^AlgCombSort:13: error: not found: value i
      if (!plusPetit(i, i+ecart)) {
                        ^AlgCombSort:14: error: not found: value i
        echange(i, i+ecart)
                ^AlgCombSort:14: error: not found: value i
        echange(i, i+ecart)
                   ^AlgCombSort:17: error: not found: value i
      i+ = 1
      ^