sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  val lgr : Int = getNombreValeurs()
  var ecart = lgr
  var echangeFait : Boolean = false
  do {
    echangeFait = false
    if (ecart > 1 ) {
    	ecart = (ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int]
    }
    i = 0
    while (i + ecart < lgr) {
      if (!plusPetit(i, i+ecart)) {
        echange(i, i+ecart)
        echangeFait = true
      }
      i+ = 1
    }
  } while (ecart > 1  || echangeFait)
}